# ai_supplychain_foodbank

./: .gitignore  PLAN.md  package-lock.json  package.json  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
data/: extraction_cache.json  foodshock.db  notice_ecoli_onions.txt  notice_salmonella_chicken.txt  notice_undeclared_milk_pasta.txt
data/eval/: gold.json
deliverables/: Farms_for_Food_pitch_deck.pptx  Farms_for_Food_problem_slides.pptx  FoodShock_pitch_deck.pptx
foodshock/: __init__.py  agent.py  datagen.py  db.py  demo.py  demo_incidents.py  engine.py  eval_extraction.py  extraction.py  incident_sources.py  narrate.py  schemas.py  viz.py
scripts/: build_pitch_deck.js  build_problem_slides.js
tests/: test_agent.py  test_allergen.py  test_eval_extraction.py  test_expiry.py  test_extraction.py  test_incident_sources.py  test_live_incident_overlay.py  test_narrate.py  test_pool_and_spoilage.py  test_resolution_tiers.py  test_timing.py  test_viz.py
