[project]
name = "foodshock"
version = "0.1.0"
description = "Farms for Food: food-bank supply shock radar (AISCO hackathon MVP)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "pulp>=2.8",
    "pydantic>=2.7",
    "networkx>=3.2",
    "streamlit>=1.36",
    "plotly>=5.22",
    "pydeck>=0.9",
    "anthropic>=0.116,<1",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foodshock"]
